# src/routes/users.routes.ts
@@ -1,11 +1,13 @@
 import { Router } from "express";
 import { requireAuth } from "../middlewares/auth.middleware";
 import { validate, becomeArtistSchema } from "../middlewares/validate.middleware";
-import { deleteUser, updateToArtist } from "../controllers/user.controller";
+import { deleteUser, updateToArtist, getProfile, updateProfile } from "../controllers/user.controller";
 
 const router = Router();
 
-router.delete("/me", requireAuth, deleteUser);
+router.get("/profile", requireAuth, getProfile);
+router.patch("/profile", requireAuth, validate(becomeArtistSchema), updateProfile);
+router.delete("/account", requireAuth, deleteUser);
 router.patch("/become-artist", requireAuth, validate(becomeArtistSchema), updateToArtist);
 
 export default router;
